# tf-rust-socketio

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/version/: SKILL.md
.github/workflows/: benchmark.yml  build.yml  coverage.yml  publish.yml  test.yml
engineio/: Cargo.toml  README.md
engineio/benches/: engineio.rs
engineio/src/: error.rs  lib.rs
engineio/src/asynchronous/: async_socket.rs
engineio/src/asynchronous/client/: async_client.rs
engineio/src/client/: client.rs  mod.rs
socketio/: Cargo.toml
socketio/examples/: async.rs  callback.rs  readme.rs  secure.rs
socketio/src/: error.rs  lib.rs  packet.rs  payload.rs  socket.rs  test_async_concurrent_ack.rs  test_concurrent_ack.rs
socketio/src/asynchronous/: mod.rs  socket.rs
socketio/src/asynchronous/client/: builder.rs  client.rs  mod.rs
socketio/src/client/: builder.rs  client.rs  mod.rs  raw_client.rs
